--- a/assets/bootstrap/comic-book-theme.css
+++ b/assets/bootstrap/comic-book-theme.css
@@ -5,10 +5,10 @@
 }
 
 html {
-  /* font-size: 62.5%; */
+  font-size: 62.5%;
 }
 
-.btn-check:focus + .btn,
+.btn-check:focus+.btn,
 .btn:focus {
   box-shadow: none;
 }
@@ -22,18 +22,23 @@ html {
 .cb__fsl1 {
   font-size: 10rem;
 }
+
 .cb__fsl2 {
   font-size: 9rem;
 }
+
 .cb__fsl3 {
   font-size: 8rem;
 }
+
 .cb__fsl4 {
   font-size: 7rem;
 }
+
 .cb__fsl5 {
   font-size: 6rem;
 }
+
 .cb__fsl6 {
   font-size: 5rem;
 }
@@ -45,21 +50,27 @@ html {
   text-shadow: var(--header-text-shadow1);
   text-transform: uppercase;
 }
+
 h1.cb__header {
   text-shadow: var(--header-text-shadow1);
 }
+
 h2.cb__header {
   text-shadow: var(--header-text-shadow2);
 }
+
 h3.cb__header {
   text-shadow: var(--header-text-shadow3);
 }
+
 h4.cb__header {
   text-shadow: var(--header-text-shadow4);
 }
+
 h5.cb__header {
   text-shadow: var(--header-text-shadow5);
 }
+
 h6.cb__header {
   text-shadow: var(--header-text-shadow6);
 }
@@ -77,6 +88,7 @@ h6.cb__header {
   color: var(--color-black);
   opacity: 1;
 }
+
 .cb__alert .btn-close:focus {
   box-shadow: none;
 }
@@ -100,28 +112,46 @@ h6.cb__header {
   text-transform: uppercase;
   transition: none;
 }
+
 .cb__button:active,
 .cb__button:focus {
   box-shadow: inset 0.125em 0.125em var(--color-black) !important;
+  padding: 1em .9em 0.750em 1.1em;
   transform: translate(0, 0.025em);
+}
+
+.cb__button.dropdown-toggle:after {
+  right: 0;
+  top: -1px;
 }
 
 .cb__button.btn-lg {
   font-size: 1.8rem;
   padding: 1em;
 }
+.cb__button.btn-lg:active,
+.cb__button.btn-lg:focus{
+  padding: 1.05em .95em .95em 1.05em;
+}
 
 .cb__button.btn-sm {
   font-size: 0.8rem;
   padding: 0.8em 0.8em;
 }
+.cb__button.btn-sm:active,
+.cb__button.btn-sm:focus{
+  padding: 0.8em 0.5em 0.6em 0.8em;
+}
+
 
 .cb__button.btn-primary {
   background-color: var(--bs-primary);
 }
+
 .cb__button.btn-primary:hover {
   background-color: var(--bs-primary-shade);
 }
+
 .cb__button.btn-primary:active,
 .cb__button.btn-primary:focus {
   background-color: var(--bs-primary-shade);
@@ -130,9 +160,11 @@ h6.cb__header {
 .cb__button.btn-secondary {
   background-color: var(--bs-secondary);
 }
+
 .cb__button.btn-secondary:hover {
   background-color: var(--bs-secondary-shade);
 }
+
 .cb__button.btn-secondary:active,
 .cb__button.btn-secondary:focus {
   background-color: var(--bs-secondary-shade);
@@ -141,10 +173,12 @@ h6.cb__header {
 .cb__button.btn-success {
   background-color: var(--bs-success);
 }
+
 .cb__button.btn-success:hover,
 .cb__button.btn-success:focus {
   background-color: var(--bs-success-shade);
 }
+
 .cb__button.btn-success:active {
   background-color: var(--bs-success-shade);
 }
@@ -153,10 +187,12 @@ h6.cb__header {
   background-color: var(--bs-info);
   color: var(--bs-white);
 }
+
 .cb__button.btn-info:hover,
 .cb__button.btn-info:focus {
   background-color: var(--bs-info-shade);
 }
+
 .cb__button.btn-info:active {
   background-color: var(--bs-info-shade);
 }
@@ -165,10 +201,12 @@ h6.cb__header {
   background-color: var(--bs-warning);
   color: var(--bs-white);
 }
+
 .cb__button.btn-warning:hover,
 .cb__button.btn-warning:focus {
   background-color: var(--bs-warning-shade);
 }
+
 .cb__button.btn-warning:active {
   background-color: var(--bs-warning-shade);
 }
@@ -176,10 +214,12 @@ h6.cb__header {
 .cb__button.btn-danger {
   background-color: var(--bs-danger);
 }
+
 .cb__button.btn-danger:hover,
 .cb__button.btn-danger:focus {
   background-color: var(--bs-danger-shade);
 }
+
 .cb__button.btn-danger:active {
   background-color: var(--bs-danger-shade);
 }
@@ -188,9 +228,11 @@ h6.cb__header {
   background-color: var(--bs-light-shade);
   color: var(--bs-white);
 }
+
 .cb__button.btn-light:hover {
   background-color: var(--bs-light);
 }
+
 .cb__button.btn-light:active,
 .cb__button.btn-light:focus {
   background-color: var(--bs-light-shade);
@@ -199,10 +241,12 @@ h6.cb__header {
 .cb__button.btn-dark {
   background-color: var(--bs-dark);
 }
+
 .cb__button.btn-dark:hover,
 .cb__button.btn-dark:focus {
   background-color: var(--bs-dark-shade);
 }
+
 .cb__button.btn-dark:active {
   background-color: var(--bs-dark-shade);
 }
@@ -212,6 +256,7 @@ h6.cb__header {
 .cb__button.btn-outline-primary:hover {
   background-color: var(--bs-primary);
 }
+
 .cb__button.btn-outline-primary:active,
 .cb__button.btn-outline-primary:focus {
   background-color: var(--bs-primary-shade);
@@ -220,6 +265,7 @@ h6.cb__header {
 .cb__button.btn-outline-secondary:hover {
   background-color: var(--bs-secondary);
 }
+
 .cb__button.btn-outline-secondary:active,
 .cb__button.btn-outline-secondary:focus {
   background-color: var(--bs-secondary-shade);
@@ -228,6 +274,7 @@ h6.cb__header {
 .cb__button.btn-outline-success:hover {
   background-color: var(--bs-success);
 }
+
 .cb__button.btn-outline-success:active,
 .cb__button.btn-outline-success:focus {
   background-color: var(--bs-success-shade);
@@ -237,6 +284,7 @@ h6.cb__header {
   background-color: var(--bs-info);
   color: var(--bs-white);
 }
+
 .cb__button.btn-outline-info:active,
 .cb__button.btn-outline-info:focus {
   background-color: var(--bs-info-shade);
@@ -246,6 +294,7 @@ h6.cb__header {
   background-color: var(--bs-warning);
   color: var(--bs-white);
 }
+
 .cb__button.btn-outline-warning:active,
 .cb__button.btn-outline-warning:focus {
   background-color: var(--bs-warning-shade);
@@ -255,6 +304,7 @@ h6.cb__header {
   background-color: var(--bs-danger);
   color: var(--bs-white);
 }
+
 .cb__button.btn-outline-danger:active,
 .cb__button.btn-outline-danger:focus {
   background-color: var(--bs-danger-shade);
@@ -264,6 +314,7 @@ h6.cb__header {
   background-color: var(--bs-light-shade);
   color: var(--bs-white);
 }
+
 .cb__button.btn-outline-light:focus,
 .cb__button.btn-outline-light:active {
   background-color: var(--bs-light-shade);
@@ -277,27 +328,33 @@ h6.cb__header {
   border-style: solid;
   border-color: var(--color-black) !important;
 }
+
 .cb__card.card .card-header {
   background: var(--color-black);
+  border-radius: 0;
   color: var(--bs-white);
   font-weight: 600;
   padding: 0.1rem 0.5rem;
   text-transform: uppercase;
 }
-.cb__card.card .card-body {
-}
-.cb__card.card .card-title {
-}
-.cb__card.card .card-subtitle {
-}
-.cb__card.card .card-text {
-}
-.cb__card.card .card-link {
-}
-.cb__card.card .card-footer {
-}
+
+.cb__card.card .card-body {}
+
+.cb__card.card .card-title {}
+
+.cb__card.card .card-subtitle {}
+
+.cb__card.card .card-text {}
+
+.cb__card.card .card-link {}
+
+.cb__card.card .card-footer {}
 
 /*====================== MODALS*/
+
+.cb__modal {
+  padding-top: 15px;
+}
 
 .cb__modal .modal-dialog {
   border-radius: 0;
@@ -305,14 +362,17 @@ h6.cb__header {
   border-style: solid;
   border-color: var(--color-black) !important;
 }
+
 .cb__modal .modal-content {
   border: none;
   border-radius: 0;
 }
+
 .cb__modal .modal-header {
   border: none;
   border-radius: 0;
 }
+
 .cb__modal .modal-header .modal-title {
   background: var(--color-black);
   color: var(--bs-white);
@@ -323,6 +383,7 @@ h6.cb__header {
   top: -1.3rem;
   transform: skewX(-10deg) rotate(-2deg);
 }
+
 .cb__modal .modal-header .btn-close {
   color: var(--color-black);
   opacity: 1;
@@ -330,9 +391,11 @@ h6.cb__header {
   right: 0.7rem;
   top: 0.7rem;
 }
+
 .cb__modal .btn-close:focus {
   box-shadow: none;
 }
+
 .cb__modal .modal-footer {
   border: none;
   border-radius: 0;
@@ -353,21 +416,25 @@ h6.cb__header {
   border: var(--border-black);
   color: var(--color-black);
 }
+
 .cb__form-control:focus {
   border-color: var(--bs-primary);
   box-shadow: none;
 }
+
 .cb__form-control.form-control-plaintext {
   border: none;
 }
+
 .cb__form-control.form-control-plaintext:focus-visible {
   outline: var(--border-black);
 }
 
-.cb__form-control + input.cb__form-control {
+.cb__form-control+input.cb__form-control {
   border-left: 1px solid #000;
 }
-input.cb__form-control + .cb__form-control {
+
+input.cb__form-control+.cb__form-control {
   border-left: 1px solid #000;
 }
 
@@ -383,6 +450,7 @@ input.cb__form-control + .cb__form-control {
   text-transform: uppercase;
   transition: none;
 }
+
 /* border-color: transparent;
     font-weight: 600; */
 .cb__nav-tabs .nav-link:hover,
@@ -392,6 +460,7 @@ input.cb__form-control + .cb__form-control {
   border-radius: 0;
   border-width: 3px;
 }
+
 .cb__nav-tabs .nav-link.active {
   border: 3px solid #000;
   border-radius: 0;
@@ -400,20 +469,86 @@ input.cb__form-control + .cb__form-control {
   font-weight: 600;
 }
 
+.cb__nav-tabs .dropdown-toggle:after{
+  top: 0;
+}
+
 /*====================== DROPDOWNS*/
 .dropdown-menu {
   border: var(--border-black);
   padding: 0;
 }
+
 .dropdown-item {
   padding: 0.65rem 1rem;
 }
+
 .dropdown-item:hover,
 .dropdown-item:focus {
   background-color: var(--bs-light-shade);
   outline: var(--border-black);
 }
+
 .dropdown-divider {
   border-top: var(--border-black);
   margin: 0;
+}
+
+.dropdown-toggle{
+  padding-right: 1.4em;
+}
+
+.dropdown-toggle:after{
+  border: solid black;
+  border-width: 0 3px 3px 0;
+  display: inline-block;
+  padding: 3px;
+  position: relative;
+  right: -4px;
+  top: -3px;
+  transform: rotate(45deg);
+}
+
+/*====================== NAV-PILLS*/
+
+.cb__nav-pills {}
+
+.cb__nav-pills .nav-link {
+  align-items: center;
+  border: 0.1875rem solid var(--color-black) !important;
+  border-radius: 2em;
+  box-shadow: inset 0.1875rem 0.1875rem var(--bs-white), inset -0.1875rem -0.1875rem var(--color-black) !important;
+  color: var(--bs-white);
+  cursor: pointer;
+  display: inline-flex;
+  font-size: 1rem;
+  font-weight: 600;
+  justify-content: center;
+  line-height: 1.5;
+  padding: .4em 1.1em;
+  padding-right: 1.4em;
+  text-align: center;
+  text-decoration: none;
+  text-shadow: var(--link-text-shadow);
+  text-transform: uppercase;
+  transition: none;
+  user-select: none;
+  vertical-align: middle;
+}
+
+.cb__nav-pills .nav-link-warning,
+.cb__nav-pills .nav-link-warning.active{
+  background-color: var(--bs-warning);
+}
+.cb__nav-pills .nav-link-warning:hover,
+.cb__nav-pills .nav-link-warning.active:hover{
+  background-color: var(--bs-warning-shade);
+}
+
+.cb__nav-pills .nav-link-warning:active,
+.cb__nav-pills .nav-link-warning:focus,
+.cb__nav-pills .nav-link-warning.active:focus{
+  background-color: var(--bs-warning-shade);
+  box-shadow: inset 0.125em 0.125em var(--color-black) !important;
+  transform: translate(0, 0.025em);
 }
